--- a/src/scss/components/_character.scss
+++ b/src/scss/components/_character.scss
@@ -195,14 +195,6 @@
          left: calc(50% - 25px);
       }
 
-      .ac-middle {
-         position: absolute;
-         font-size: 15px;
-         bottom: 25px;
-         width: 50px;
-         left: calc(50% - 25px);
-      }
-
       .ac-bottom {
          position: absolute;
          font-size: 12px;
