--- a/src/scss/global/_window.scss
+++ b/src/scss/global/_window.scss
@@ -15,7 +15,7 @@
 .fantastic-depths {
    .window-content {
       .tab {
-         height:100%;
+         /*height:100%;*/
       }
       input, select {
          max-height: 26px;
